<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.example.android.quizz.MainActivity"
    android:weightSum="1">

    <ImageView
        app:srcCompat="@drawable/quiz"
        android:id="@+id/imageView2"
        style="@style/image" />

    <TextView
        android:text="@string/questionText"
        android:id="@+id/question"
    android:textAlignment="center"
        style="@style/questionText" />

    <Button
        android:text="@string/hello"
        android:id="@+id/choice1"
        style="@style/button" />

    <Button
        android:text="@string/bird"
        style="@style/button"
        android:id="@+id/choice2"/>

    <Button
        android:text="@string/door"
        style="@style/button"
        android:id="@+id/choice3"/>

    <Button
        android:text="@string/tea"
        style="@style/button"
        android:id="@+id/choice4"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingLeft="8dp">

        <TextView
            android:text="0"
            android:id="@+id/score"
            style="@style/scoreNumber" />

        <TextView
            android:text="Score"
            android:id="@+id/score_text"
            style="@style/score" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>